PcapHandlerTest: remove usage deprecated Integer constructor